[CXF-7056]use new JVM options with recent java9 kit
Former-commit-id: e9b997e808857cda15f428aed8a78ea8d1856db7